--- a/summary.html
+++ b/summary.html
@@ -98,15 +98,32 @@
       gap: 8px;
       margin-bottom: 15px;
     }
-    .goal-setting .goal-row {
-      display: flex;
-      align-items: center;
-      gap: 10px;
-    }
-    .goal-setting label {
-      font-weight: bold;
-      min-width: 160px;
-    }
+    .goal-row {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  margin-bottom: 10px;
+  flex-wrap: wrap;
+}
+
+.goal-row label {
+  font-weight: bold;
+  min-width: 230px; /* สำคัญ: บังคับให้ label ทุกแถวกว้างเท่ากัน */
+}
+
+.goal-row input[type="number"] {
+  width: 120px;
+}
+
+.goal-row button {
+  min-width: 80px;
+}
+
+.goal-feedback {
+  min-width: 100px;
+  color: green;
+}
+
     @media print {
       label, select, button, td:last-child, th:last-child, .sodium-setting, .goal-setting { display: none !important; }
     }
@@ -116,10 +133,76 @@
       margin-top: 30px;
       width: 100%;
     }
+    .bar-container {
+  background-color: #ecf0f1;
+  border-radius: 20px;
+  overflow: hidden;
+  height: 28px;
+  margin-bottom: 15px;
+  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
+}
+
+.bar-fill {
+  height: 100%;
+  line-height: 28px;
+  text-align: right;
+  padding-right: 12px;
+  font-weight: bold;
+  color: white;
+  border-radius: 20px;
+  transition: width 0.6s ease;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+}
+
   </style>
+  <style>
+  @media screen and (max-width: 768px) {
+    .goal-setting {
+      gap: 10px;
+    }
+    .goal-row {
+      flex-direction: column;
+      align-items: flex-start;
+    }
+    .goal-row label {
+      min-width: auto;
+      width: 100%;
+    }
+    .goal-row input[type="number"],
+    .goal-row button,
+    .goal-feedback {
+      width: 100%;
+      margin-top: 5px;
+    }
+    .goal-feedback {
+      text-align: left;
+    }
+    .bar-container {
+      height: 24px;
+    }
+    canvas {
+      max-width: 100% !important;
+    }
+    table {
+      font-size: 0.9rem;
+      display: block;
+      overflow-x: auto;
+      white-space: nowrap;
+    }
+    th, td {
+      padding: 6px;
+    }
+    .center-button button {
+      width: 100%;
+      font-size: 1rem;
+      padding: 10px;
+    }
+  }
+</style>
+
 </head>
 <body>
-  <div class="container" id="pdfContent">
+  <div  id="pdfContent">
     <img id="logo" src="https://upload.wikimedia.org/wikipedia/commons/4/4a/Logo_2021.svg" alt="Logo">
     <h2>เลือกเมนูที่คุณทานวันนี้</h2>
 
@@ -161,11 +244,9 @@
 <div style="text-align: right; margin-top: 10px;">
       <button onclick="resetAllData()" style="background-color: #e74c3c; padding: 8px 16px; border-radius: 6px;">🔄 เคลียร์ข้อมูลทั้งหมด</button>
     </div>
-    <div id="progressBars" class="container" style="background: #f8f9fa; border-radius: 12px; padding: 15px; margin-top: 20px;"></div>
-
-    <div id="mealTables"></div>
-    <div class="warning" id="alerts"></div>
-  </div>
+    <div id="progressBars" class="container" ></div>
+<br><br>
+    
 
     <label for="mealTime">เลือกมื้อ:</label>
     <select id="mealTime">
@@ -258,6 +339,13 @@
       localStorage.clear();
       location.reload();
     }
+    function resetAllData() {
+     const confirmClear = confirm("คุณต้องการล้างข้อมูลทั้งหมดหรือไม่?");
+     if (confirmClear) {
+    localStorage.clear();
+    location.reload();
+      }
+      }
 
     window.onload = function() {
       renderTables();
@@ -331,7 +419,7 @@ function saveSodiumLimit() {
 
 
   </script>
- 
+ <br>
 
   <div class="container">
     <h2>สรุปสัดส่วนสารอาหารรวมวันนี้</h2>
@@ -372,27 +460,33 @@ function saveSodiumLimit() {
     }
 
     function updateProgressBars(total) {
-      const barsHTML = ['Carb', 'Protein', 'Fat'].map((key, i) => {
-        const current = total[key.toLowerCase()] || 0;
-        const goal = [carbGoal, proteinGoal, fatGoal, calGoal][i];
-        const percent = goal ? Math.min(100, Math.round((current / goal) * 100)) : 0;
-        const colors = ['#f39c12', '#27ae60', '#e67e22', '#3498db'];
+  const barsHTML = ['Carb', 'Protein', 'Fat'].map((key, i) => {
+    const current = total[key.toLowerCase()] || 0;
+    const goal = [carbGoal, proteinGoal, fatGoal][i];
+    const percent = goal ? Math.min(100, Math.round((current / goal) * 100)) : 0;
 
-        return `
-          <div style="margin-bottom: 5px;"><strong>${key}</strong></div>
-          <div class="bar-container">
-            <div class="bar-fill" style="width: ${percent}%; background-color: ${colors[i]}">
-              ${percent}%
-            </div>
-          </div>
-        `;
-      }).join('');
+    const gradients = [
+      'linear-gradient(to right, #f9d423, #f39c12)',   // Carb
+      'linear-gradient(to right, #43e97b, #38f9d7)',   // Protein
+      'linear-gradient(to right, #f7971e, #e67e22)'    // Fat
+    ];
 
-      document.getElementById("progressBars").innerHTML = `
-        <h3>สรุปภาพรวมการบริโภค</h3>
-        ${barsHTML}
-      `;
-    }
+    return `
+      <div style="margin-bottom: 5px;"><strong>${key}</strong></div>
+      <div class="bar-container">
+        <div class="bar-fill" style="width: ${percent}%; background: ${gradients[i]};">
+          ${percent}%
+        </div>
+      </div>
+    `;
+  }).join('');
+
+  document.getElementById("progressBars").innerHTML = `
+    <h3>สรุปภาพรวมการบริโภค</h3>
+    ${barsHTML}
+  `;
+}
+
 
     function updateChart(totalCarb, totalProtein, totalFat, totalCal) {
       const ctx = document.getElementById('nutritionChart').getContext('2d');
