--- a/summary.html
+++ b/summary.html
@@ -202,12 +202,16 @@
 
 </head>
 <body>
-  <div  id="pdfContent">
-    <img id="logo" src="https://upload.wikimedia.org/wikipedia/commons/4/4a/Logo_2021.svg" alt="Logo">
-    <h2>เลือกเมนูที่คุณทานวันนี้</h2>
-
+  
   <div class="container" id="pdfContent">
     <!-- ... existing content ... -->
+     <div  id="pdfContent">
+    <img src="images/logo.png" alt="Logo" style="max-width:150px; display:block; margin: 0 auto;">
+
+    
+
+    <h2>เลือกเมนูที่คุณทานวันนี้</h2>
+</div>
     <div class="goal-setting">
       <div class="goal-row">
         <label for="goalCarb">เป้าหมาย Carb (g):</label>
