--- a/summary.html
+++ b/summary.html
@@ -206,7 +206,7 @@
   <div class="container" id="pdfContent">
     <!-- ... existing content ... -->
      <div  id="pdfContent">
-    <img src="images/logo.png" alt="Logo" style="max-width:150px; display:block; margin: 0 auto;">
+    <img src="images/logo2.png" alt="Logo" style="max-width:150px; display:block; margin: 0 auto;">
 
     
 
