--- a/summary.html
+++ b/summary.html
@@ -9,6 +9,8 @@
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@400;600&display=swap" rel="stylesheet">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.2/html2pdf.bundle.min.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+
   <style>
     body {
       font-family: 'Kanit', sans-serif;
@@ -198,15 +200,48 @@
       padding: 10px;
     }
   }
+  
 </style>
 
 </head>
 <body>
   
   <div class="container" id="pdfContent">
-    <!-- ... existing content ... -->
+
      <div  id="pdfContent">
-    <img src="images/logo.png" alt="Logo" style="max-width:130px; display:block; margin: 0 auto;">
+   
+<style>
+@keyframes pulseLogo {
+  0%   { transform: scale(1); }
+  50%  { transform: scale(1.08); }
+  100% { transform: scale(1); }
+}
+
+#logo {
+  animation: pulseLogo 2s ease-in-out infinite;
+  max-width: 150px;
+  display: block;
+  margin: 0 auto 10px;
+}
+body {
+  background: linear-gradient(-45deg, #c1ebee, #c2d8f7, #bfecf0, #a9dfe2);
+  background-size: 400% 400%;
+  animation: bgMove 15s ease infinite;
+}
+
+@keyframes bgMove {
+  0% { background-position: 0% 50%; }
+  50% { background-position: 100% 50%; }
+  100% { background-position: 0% 50%; }
+}
+
+</style>
+
+
+<img id="logo" src="images/logo.png" alt="Logo" style="max-width: 150px; display: block; margin: 0 auto 10px;">
+
+
+
 
     <h2>เลือกเมนูที่คุณทานวันนี้</h2>
 </div>
