--- a/index.html
+++ b/index.html
@@ -5,170 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Nutrition Calculator</title>
   <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@300;400;600&display=swap" rel="stylesheet"/>
-  <style>
-    :root {
-      --primary: #4caf50;
-      --secondary: #2196f3;
-      --danger: #e53935;
-      --light: #f1f1f1;
-      --dark: #333;
-    }
-    * { box-sizing: border-box; }
-    body {
-      font-family: 'Kanit', sans-serif;
-      background: linear-gradient(135deg, #e0f7fa, #e1f5fe);
-      margin: 0; padding: 0; color: var(--dark);
-    }
-    .container {
-      max-width: 1000px; margin: 40px auto;
-      background: white; padding: 30px;
-      border-radius: 15px; box-shadow: 0 8px 25px rgba(0,0,0,0.15);
-    }
-    h2 { text-align: center; color: var(--primary); }
-    label, select {
-      display: block; margin: 20px auto; max-width: 300px; font-size: 1rem;
-    }
-    select {
-      padding: 10px; border-radius: 8px; border: 1px solid #ccc;
-      font-family: 'Kanit', sans-serif;
-    }
-    table {
-      width: 100%; border-collapse: collapse; margin-top: 20px;
-      font-family: 'Kanit', sans-serif;
-    }
-    th, td {
-      padding: 8px; border: 1px solid #ddd; text-align: center;
-    }
-    th { background-color: var(--secondary); color: white; }
-    input[list], input[type="number"] {
-      width: 80px; padding: 4px;
-      border: 1px solid #ccc; border-radius: 5px;
-      font-size: 0.9rem; font-family: 'Kanit', sans-serif;
-    }
-    td:first-child input { width: 100%; }
-    .btn {
-      padding: 10px 20px; border: none; border-radius: 8px;
-      font-size: 1rem; cursor: pointer; margin-top: 20px;
-      font-family: 'Kanit', sans-serif;
-    }
-    .btn-add { background-color: var(--primary); color: white; }
-    .btn-remove {
-      background-color: var(--danger); color: white;
-      font-size: 0.9rem; padding: 4px 8px;
-      border-radius: 4px; display: flex;
-      align-items: center; justify-content: center;
-      width: 28px; height: 28px; margin: auto;
-    }
-    .total {
-      margin-top: 30px; background-color: var(--light);
-      padding: 15px; border-radius: 8px;
-      font-size: 1.1rem; text-align: center;
-      box-shadow: inset 0 0 5px rgba(0,0,0,0.05);
-    }
-    .instructions {
-      margin-top: 30px; background-color: #fff8e1;
-      padding: 15px; border-left: 5px solid var(--primary);
-      border-radius: 8px; font-size: 1rem;
-      display: none; font-family: 'Kanit', sans-serif;
-    }
-    .center-button {
-      display: flex;
-      justify-content: center;
-      margin-top: 30px;
-      width: 100%;
-    }
-  </style>
-  <style>
-  @media screen and (max-width: 768px) {
-    .goal-setting {
-      gap: 10px;
-    }
-    .goal-row {
-      flex-direction: column;
-      align-items: flex-start;
-    }
-    .goal-row label {
-      min-width: auto;
-      width: 100%;
-    }
-    .goal-row input[type="number"],
-    .goal-row button,
-    .goal-feedback {
-      width: 100%;
-      margin-top: 5px;
-    }
-    .goal-feedback {
-      text-align: left;
-    }
-    .bar-container {
-      height: 24px;
-    }
-    canvas {
-      max-width: 100% !important;
-    }
-    table {
-      font-size: 0.9rem;
-      display: block;
-      overflow-x: auto;
-      white-space: nowrap;
-    }
-    th, td {
-      padding: 6px;
-    }
-    .center-button button {
-      width: 100%;
-      font-size: 1rem;
-      padding: 10px;
-    }
-    .container {
-      padding: 16px;
-    }
-    label,
-    select,
-    .btn {
-      width: 100%;
-      margin-bottom: 10px;
-    }
-    .total,
-    .instructions {
-      font-size: 0.9rem;
-      word-wrap: break-word;
-    }
-  }
-  .animate__animated.animate__bounce {
-  --animate-duration: 2s;
-}
-
-/* This changes all the animations globally */
-:root {
-  --animate-duration: 800ms;
-  --animate-delay: 0.9s;
-}
-@keyframes pulseLogo {
-  0%   { transform: scale(1); }
-  50%  { transform: scale(1.08); }
-  100% { transform: scale(1); }
-}
-
-#logo {
-  animation: pulseLogo 2s ease-in-out infinite;
-  max-width: 150px;
-  display: block;
-  margin: 0 auto 10px;
-}
-body {
-  background: linear-gradient(-45deg, #c1ebee, #c2d8f7, #bfecf0, #a9dfe2);
-  background-size: 400% 400%;
-  animation: bgMove 15s ease infinite;
-}
-
-@keyframes bgMove {
-  0% { background-position: 0% 50%; }
-  50% { background-position: 100% 50%; }
-  100% { background-position: 0% 50%; }
-}
-
-</style>
+  
+<link rel="stylesheet" href="/style/home.css">
 
 
 </div>
