--- a/summary.html
+++ b/summary.html
@@ -99,7 +99,7 @@
       <button onclick="exportCSV()">⬇️ บันทึก CSV</button>
       <a href="index.html">
       <button style="padding: 12px 24px; font-size: 16px; background-color: #27ae60; color: white; border: none; border-radius: 8px; cursor: pointer; font-family: 'Kanit', sans-serif;">
-        👉 ดูสรุปสารอาหารรายวัน
+        👉 ดูเมนูอาหาร
       </button>
     </a>
     </div>
@@ -419,3 +419,4 @@ csv += `ขาด/เกิน,,${(total.carb - carbGoal).toFixed(1)},${(total.p
 </body>
 
 </html>
+
