--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   
   <div class="container">
     <img id="logo" src="images/logo.png" alt="Logo" style="max-width: 150px; display: block; margin: 0 auto 10px;">
-    <h2>คำนวณสารอาหารเมนูอาหาร</h2>
+    <h2>เมนูอาหารและคำนวณสารอาหาร</h2>
     <label for="menuSelect">เลือกเมนู:
       <select id="menuSelect"></select>
     </label>
@@ -186,3 +186,4 @@
   </div>
 </body>
 </html>
+
